--- a/css/general.css
+++ b/css/general.css
@@ -2,6 +2,26 @@
 /* GENERAL REUSIBLE COMPONENTS */
 /* ============================ */
 
+:root {
+  --color-primary: #e67e22;
+  --color-tint-1: #fdf2e9;
+  --color-tint-2: #fae5d3;
+  --color-shade-1: #cf711f;
+  --color-grey1: #333;
+  --color-grey2: #555;
+  --color-grey3: #999;
+  --color-grey4: #ddd;
+
+  --border-radius-default: 9px;
+
+  --font-w-default: 400;
+  --font-w-medium: 500;
+  --font-w-semi-bold: 600;
+  --font-w-bold: 700;
+
+  --section-padding: 9.6rem 0;
+}
+
 .container {
   max-width: 120rem;
   margin: 0 auto;
@@ -103,10 +123,32 @@
   box-shadow: inset 0 0 0 3px white;
 }
 
+.link:link,
+.link:visited {
+  color: var(--color-primary);
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+}
+
+.link:hover,
+.link:active {
+  color: var(--color-shade-1);
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER/SETTINGS CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
 
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
 strong {
-  font-weight: 600;
+  font-weight: var(--font-w-semi-bold);
 }
