--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,14 @@ body {
   border-radius: 1.1rem;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   overflow: hidden;
+  transition: all 400ms;
 }
+
+.meal:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
 .meal-content {
   padding: 3.2rem;
   padding-top: 2.4rem;
@@ -355,6 +362,11 @@ body {
 
 .meal-img {
   width: 100%;
+}
+
+.all-recipes {
+  text-align: center;
+  font-size: 1.8rem;
 }
 
 .meal-icon {
