--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ default: 9px
   --color-tint-1: #fdf2e9;
   --color-tint-2: #fae5d3;
   --color-shade-1: #cf711f;
+  --color-yellow-1: #ffd43b;
   --color-grey1: #333;
   --color-grey2: #555;
   --color-grey3: #6f6f6f;
@@ -375,25 +376,6 @@ body {
   color: var(--color-shade-1);
 }
 
-.list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1.4rem;
-}
-
-.list-icon {
-  font-size: 2.6rem;
-  color: var(--color-shade-1);
-}
-
-.list-item {
-  font-size: 1.8rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-}
-
 /* ============================ */
 /* MEALS SECTION */
 /* ============================ */
@@ -450,4 +432,102 @@ body {
 
 .gallery-item img:hover {
   transform: scale(1.1);
+}
+
+/* ============================ */
+/* MEALS SECTION */
+/* ============================ */
+
+.section-pricing {
+  padding: var(--section-padding);
+}
+.pricing-plan {
+  border-radius: 11px;
+  padding: 4.8rem;
+  width: 75%;
+}
+.pricing-plan-starter {
+  justify-self: end;
+  box-shadow: inset 0 0 0 3px var(--color-tint-1);
+}
+.pricing-plan-complete {
+  overflow: hidden;
+  position: relative;
+  background-color: var(--color-tint-1);
+}
+.pricing-plan-complete::after {
+  content: "Best Value";
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: var(--font-w-bold);
+  top: 1.4rem;
+  right: -3rem;
+  background-color: var(--color-yellow-1);
+  padding: 0.8rem 4rem;
+  transform: rotate(30deg);
+}
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.plan-name {
+  color: var(--color-shade-1);
+  font-weight: var(--font-w-semi-bold);
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: var(--font-w-semi-bold);
+  color: var(--color-grey1);
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: var(--font-w-medium);
+  margin-right: 0.8rem;
+}
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: var(--color-grey3);
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 2.6rem;
+}
+
+/* ============================ */
+/* FEATURE SECTION */
+/* ============================ */
+
+.plan-details {
+  font-size: 1.6rem;
+  line-height: 1.6rem;
+  text-align: center;
+}
+
+.feature-icon {
+  color: var(--color-primary);
+  font-size: 2.4rem;
+  margin-bottom: 3.2rem;
+  background-color: var(--color-tint-1);
+  padding: 1.3rem;
+  border-radius: 500px;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: var(--color-grey1);
+  font-weight: var(--font-w-bold);
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  font-size: 1.8rem;
+  line-height: 1.8rem;
 }
