--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,10 @@ default: 9px
   --color-primary: #e67e22;
   --color-tint-1: #fdf2e9;
   --color-tint-2: #fae5d3;
+  --color-tint-8: #eb984e;
+  --color-tint-9: #e98b38;
   --color-shade-1: #cf711f;
+  --color-shade-8: #45260a;
   --color-yellow-1: #ffd43b;
   --color-grey1: #333;
   --color-grey2: #555;
@@ -530,4 +533,96 @@ body {
 .feature-text {
   font-size: 1.8rem;
   line-height: 1.8rem;
+}
+
+/* ============================ */
+/* CTA SECTION */
+/* ============================ */
+
+.section-cta {
+  padding: var(--section-padding);
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* background-color: var(--color-primary); */
+  background-image: linear-gradient(
+    to right bottom,
+    var(--color-tint-8),
+    var(--color-primary)
+  );
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  height: 50rem;
+  overflow: hidden;
+}
+.cta-text-box {
+  padding: 6.4rem;
+  padding-top: 4.8rem;
+  color: var(--color-shade-8);
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  padding-bottom: 4.8rem;
+  color: var(--color-shade-8);
+}
+
+.cta .heading-secondary {
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      hsla(28, 80%, 61%, 0.35),
+      rgba(230, 125, 34, 0.35)
+    ),
+    url(../content/img/eating.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  padding-bottom: 1.2rem;
+  font-weight: var(--font-w-medium);
+}
+
+.cta-form div input,
+.cta-form div select,
+.cta-form button {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form div input,
+.cta-form div select {
+  color: inherit;
+
+  background-color: var(--color-tint-1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(250, 229, 211, 0.5);
 }
