--- a/css/general.css
+++ b/css/general.css
@@ -57,6 +57,9 @@
 .grid-4cols {
   grid-template-columns: repeat(4, 1fr);
 }
+.grid-5cols {
+  grid-template-columns: repeat(5, 1fr);
+}
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
