--- a/css/queries.css
+++ b/css/queries.css
@@ -181,4 +181,108 @@ default: 9px
   .btn-form {
     margin-top: 1.2rem;
   }
+
+  /* MOBILE NAV */
+  .btn-mobile-nav {
+    display: block;
+  }
+  .main-nav {
+    background-color: rgba(255, 255, 255, 1);
+    box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.08);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 400ms ease-in-out;
+    transform: translateY(-120%);
+    /* display: none; doesnt allow for animations, so we have to use these other settings to do it: */
+    /* hide element visually */
+    opacity: 0;
+
+    /* make it unaccessible to mouse and keyboard */
+    pointer-events: none;
+
+    /* hide it from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateY(0);
+  }
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+}
+
+/* =============================== */
+/* BELLOW 704px (Smaller Tablets)*/
+/* =============================== */
+@media (max-width: 44em) {
+  .grid-3cols,
+  .grid-4cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .diets {
+    grid-column: 1/ -1;
+    justify-self: center;
+  }
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+  .logos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 2.4rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .logos img {
+    justify-self: center;
+  }
+  .logos-first3-mobile {
+    grid-row: 1;
+    grid-column: span 2;
+  }
+  .logos-last2-mobile {
+    grid-row: 2;
+    grid-column: span 3;
+  }
+  .pricing-plan {
+    width: 100%;
+  }
+  .footer-grid {
+    grid-template-columns: repeat(6, 1fr);
+    gap: 9.6rem 4.8rem;
+  }
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
+  .logo-col,
+  .address-col {
+    grid-row: 2;
+    grid-column: span 3;
+  }
+  /* .cta {
+    grid-template-columns: 1fr;
+  } */
 }
