--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ body {
 
 .header {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-tint-1);
@@ -150,6 +151,23 @@ body {
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: var(--color-shade-1);
+}
+
+/* MOBILE NAV */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  font-size: 4.8rem;
+  color: var(--color-grey1);
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /* ============================ */
