--- a/css/general.css
+++ b/css/general.css
@@ -28,6 +28,10 @@
   --section-padding: 9.6rem 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   max-width: 120rem;
   margin: 0 auto;
