--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body {
 
   padding: 0 4.8rem;
   /* because we want to be sticky later */
-  height: 9.6rem;
+  height: 8rem;
 }
 
 .logo {
@@ -168,6 +168,16 @@ body {
 
 .icon-mobile-nav[name="close-outline"] {
   display: none;
+}
+
+.sticky {
+  position: fixed;
+  width: 100%;
+  height: 8rem;
+  top: 0;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.97);
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.07);
 }
 
 /* ============================ */
